--- a/chat/templates/chat/modal.html
+++ b/chat/templates/chat/modal.html
@@ -211,15 +211,14 @@
 
                             <div class="profile-body">
                                 <div class="avatar avatar-xl">
-                                    <img class="avatar-img" style="object-fit:cover;" id="chatPartner_profile_image" src="{{ request.user.profile_image.url }}" alt="#">
+                                    <img class="avatar-img" style="object-fit:cover;" id="chatPartner_profile_image" src="{{ request.user.get_profile_img }}" alt="#">
 
-                                    <a href="#" class="badge badge-lg badge-circle bg-primary text-white border-outline position-absolute bottom-0 end-0">
+                                    <!-- <a href="#" class="badge badge-lg badge-circle bg-primary text-white border-outline position-absolute bottom-0 end-0">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-                                    </a>
+                                    </a> -->
                                 </div>
 
                                 <h4 class="mb-1" id="chatPartner_username">{{ request.user.first_name }} {{ request.user.last_name }}</h4>
-                                <p>last seen 5 minutes ago</p>
                             </div>
                         </div>
                         <!-- Header -->
@@ -228,20 +227,6 @@
 
                         <!-- List -->
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <div class="row align-items-center gx-6">
-                                    <div class="col">
-                                        <h5>Location</h5>
-                                        <p>USA, Houston</p>
-                                    </div>
-
-                                    <div class="col-auto">
-                                        <div class="btn btn-sm btn-icon btn-dark">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
 
                             <li class="list-group-item">
                                 <div class="row align-items-center gx-6">
@@ -278,23 +263,23 @@
                         <hr class="hr-bold modal-gx-n my-0">
 
                         <!-- List -->
-<!--                        <ul class="list-group list-group-flush">-->
-<!--                            <li class="list-group-item">-->
-<!--                                <div class="row align-items-center gx-6">-->
-<!--                                    <div class="col">-->
-<!--                                        <h5>Notifications</h5>-->
-<!--                                        <p>Enable sound notifications</p>-->
-<!--                                    </div>-->
+                        <!-- <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <div class="row align-items-center gx-6">
+                                    <div class="col">
+                                        <h5>Notifications</h5>
+                                        <p>Enable sound notifications</p>
+                                    </div>
 
-<!--                                    <div class="col-auto">-->
-<!--                                        <div class="form-check form-switch">-->
-<!--                                            <input class="form-check-input" type="checkbox" id="user-notification-check">-->
-<!--                                            <label class="form-check-label" for="user-notification-check"></label>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </li>-->
-<!--                        </ul>-->
+                                    <div class="col-auto">
+                                        <div class="form-check form-switch">
+                                            <input class="form-check-input" type="checkbox" id="user-notification-check">
+                                            <label class="form-check-label" for="user-notification-check"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul> -->
                         <!-- List -->
 
                         <!-- <hr class="hr-bold modal-gx-n my-0"> -->
@@ -420,7 +405,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                                         </a>
 
-                                        <input id="update_group_chat_img" onchange="previewImage(event, this,'receiver_group_image_url')" name="profile_image" class="d-none" type="file">
+                                        <input id="update_group_chat_img" onchange="previewImage(event, this,'receiver_group_image_url')" name="profile_image" class="d-none" type="file" accept="image/*">
                                         <label class="stretched-label mb-0" for="update_group_chat_img"></label>
                                     </div>
 
@@ -471,7 +456,7 @@
                                                     <div class="row align-items-center gx-5">
                                                         <div class="col-auto">
                                                             <div class="avatar ">
-                                                                    <img class="avatar-img" style="object-fit:cover;" src="{{ user.profile_image.url }}" alt="">
+                                                                    <img class="avatar-img" style="object-fit:cover;" src="{{ user.get_profile_img }}" alt="">
                                                             </div>
                                                         </div>
                                                         <div class="col">
