--- a/chat/templates/chat/offcanvas.html
+++ b/chat/templates/chat/offcanvas.html
@@ -93,14 +93,14 @@
         <!-- Avatar -->
 
         <!-- Tabs -->
-        <ul class="nav nav-pills nav-justified" role="tablist">
+        <!-- <ul class="nav nav-pills nav-justified" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="offcanvas-tab-profile-people" data-bs-toggle="pill" href="#offcanvas-tab-profile" role="tab" aria-controls="offcanvas-tab-profile" aria-selected="true">
                     Profile
                 </a>
             </li>
 
-            <!-- <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="pill" href="#offcanvas-tab-media" role="tab" aria-controls="offcanvas-tab-media" aria-selected="true">
                     Media
                 </a>
@@ -110,8 +110,9 @@
                 <a class="nav-link" data-bs-toggle="pill" href="#offcanvas-tab-files" role="tab" aria-controls="offcanvas-tab-files" aria-selected="false">
                     Files
                 </a>
-            </li> -->
-        </ul>
+            </li>
+        </ul> -->
+        <hr>
         <!-- Tabs -->
 
         <!-- Tabs: Content -->
