--- a/analytics/templates/analytics/secound_category_list.html
+++ b/analytics/templates/analytics/secound_category_list.html
@@ -1,20 +1,23 @@
 {% extends 'analytics/base.html' %}
-{% load crispy_forms_tags %} 
-{% load static %} 
+{% load crispy_forms_tags %}
+{% load static %}
 
 {% block title %}
-<h2 class="has-text-centered">
-    Post List
-</h2>
+<a href="{% url 'analytics:second-level-category-create' %}" class="button is-primary" style="margin-left: auto;">
+    +
+</a>
 
 <!--<a href="{% url 'analytics:post-create' %}" class="button is-solid accent-button" style="margin-left: auto;">Add Post</a>-->
 {% endblock title %}
 
 {% block data %}
 
-<!-- <link rel="stylesheet" href="{% static 'social_assets/css/table_bulma.css' %}"> -->
-
 <style>
+
+hr{
+  display: none;
+}
+
     .settings-wrapper .settings-section .settings-panel .settings-form .field-group label {
         font-size: 0.8em;
     }
@@ -35,28 +38,34 @@
     .table td {
         padding-top: 15px;
     }
-    
+
 </style>
 
-    <div style="width: 100% !important;" class="">
-        
+<center><h2 align="center" class="pb-2 mb-5" style="border-bottom: 0px solid #e7e7e7;">
+   Category List
+</h2></center>
+
+<p align="center" class="my-3"><a href="{% url 'analytics:first-level-category-list' %}" class="button is-primary mb-3" style="width: 120px;">First Level</a> &nbsp;&nbsp;<a href="{% url 'analytics:second-level-category-list' %}" class="button is-warning" style="width: 120px;">Secound Level</a> &nbsp;&nbsp;<a href="{% url 'analytics:third-level-category-list' %}" class="button is-info" style="width: 120px;">Third Level</a> &nbsp;&nbsp;<a href="{% url 'analytics:fourth-level-category-list' %}" class="button is-danger" style="width: 120px;">Fourth Level</a></p>
+
+
+
+    <div style="width: 100% !important;margin-top: 2em;border-top: 1px solid #e7e7e7;padding: 1em;" class="">
+
             <div class="table-container">
               <table class="table is-fullwidth">
                 <thead>
                 <tr>
-                  <th>User</th>
-                  <th>Category</th>
-                  <th>Language</th>
-                  <th>Scope of work</th>
-                  <th>Likes</th>
-                 
+                  <th>Name</th>
+                  <th>First level</th>
+
+
                   <th class="has-text-centered">Update</th>
-                  <th class="has-text-centered">Detail</th>
+<!--                  <th class="has-text-centered">Detail</th>-->
                   <th class="has-text-centered">Delete</th>
                   <th></th>
                 </tr>
                 </thead>
-                
+
                 <tbody>
                 {% for object in object_list %}
                 <tr>
@@ -65,37 +74,31 @@
                       <img src="https://avatars.dicebear.com/v2/initials/rebecca-bauch.svg" class="is-rounded">
                     </div>
                   </td> -->
-                  <td data-label="category">{{object.user.username}}</td>
-                  <td data-label="category">{{object.category}}</td>
-                  <td data-label="language">{{object.language}}</td>
-                  <td data-label="scope_of_work">{{object.scope_of_work}}</td>
-                  <td data-label="likes">{{object.liked_by.count}}</td>
-                  
-                  
+                  <td data-label="category">{{object.name}}</td>
+                  <td data-label="category">{{object.first_category.name}}</td>
+
+
                   <td class="has-text-centered" data-label="Mobile">
-                    <a href="{% url 'analytics:post-update' object.pk %}" class="button is-warning" type="button">
+                    <a href="{% url 'analytics:second-level-category-update' object.id %}" class="button is-warning" type="button">
                         <span class="icon"><i class="mdi mdi-pen"></i></span>
                     </a>
                   </td>
+
                   <td class="has-text-centered" data-label="Mobile">
-                    <a href="{% url 'analytics:post-detail' object.pk %}" class="button is-primary" type="button">
-                        <span class="icon"><i class="mdi mdi-information"></i></span>
-                    </a>
-                  </td>
-                  <td class="has-text-centered" data-label="Mobile">
-                    <a href="{% url 'analytics:post-delete' object.pk %}" class="button is-danger jb-modal" data-target="sample-modal" type="button">
+                    <a href="{% url 'analytics:second-level-category-delete' object.id %}" class="button is-danger jb-modal" data-target="sample-modal" type="button">
                         <span class="icon"><i class="mdi mdi-trash-can"></i></span>
                       </a>
                   </td>
-                  
-                  
+
+
                 </tr>
                 {% endfor %}
-                
+
                 </tbody>
               </table>
             </div>
-         
+
     </div>
+
 
 {% endblock data %}
