--- a/analytics/templates/analytics/terms.html
+++ b/analytics/templates/analytics/terms.html
@@ -4,11 +4,7 @@
 
 {% block title %}
 <h2 class="has-text-centered">
-    {% if 'create' in request.path %}
-        Post Create
-    {% else %}
-        Post Update
-    {% endif %}
+    Update Policy
 </h2>
 {% endblock title %}
 
@@ -24,7 +20,9 @@
     }
 
     .form-control{
-        padding: 2em;
+        padding: 0.5em;
+        width: 100%;
+        border: 1px solid #e7e7e7;
     }
 
     .select {
@@ -41,12 +39,13 @@
             <div class="columns is-multiline">
 
                 {% for field in form %}
-                <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
+                <div class="column  is-12">
                     <div class="field field-group">
                        
                         <div class="control has-icon">
                             {{ field.errors }}
                             {{ field|as_crispy_field }}
+                            {{ form.media }}
                             
                             
                         </div>
