--- a/analytics/templates/analytics/user_list.html
+++ b/analytics/templates/analytics/user_list.html
@@ -45,7 +45,7 @@
                   <th>Photo</th>
                   <th>Username</th>
                   <th>Email</th>
-                  <th>Account Type</th>
+<!--                  <th>Account Type</th>-->
 
                   <th class="has-text-centered">Details</th>
 
@@ -62,7 +62,7 @@
                   </td>
                   <td data-label="username">{{object.username}}</td>
                   <td data-label="language">{{object.email}}</td>
-                  <td data-label="scope_of_work">{{object.account_type}}</td>                  
+<!--                  <td data-label="scope_of_work">{{object.account_type}}</td>                  -->
                   
                   
                   <td class="has-text-centered" data-label="Mobile">
