--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -106,18 +106,16 @@
             <!-- Navigation -->
             <nav class="navigation d-flex flex-column text-center navbar navbar-light hide-scrollbar">
                 <!-- Brand -->
-                <a href="/chat" title="Messenger" class="d-none d-xl-block mb-6">
-<!--                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">-->
-<!--                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>-->
-<!--                        <polygon points="35.5,1 25.4,14.1 39,21 "/>-->
-<!--                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>-->
-<!--                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>-->
-<!--                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>-->
-<!--                        <polygon points="28,36 4.5,44 17,26 "/>-->
-<!--                        <polygon points="17,26 1,26 10.8,20.1 "/>-->
-<!--                    </svg>-->
-
-                    <img src="{% static 'images/logo/color-logo.png' %}" style="width: 50px;object-fit: cover;">
+                <a href="index.html" title="Messenger" class="d-none d-xl-block mb-6">
+                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">
+                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>
+                        <polygon points="35.5,1 25.4,14.1 39,21 "/>
+                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>
+                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>
+                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>
+                        <polygon points="28,36 4.5,44 17,26 "/>
+                        <polygon points="17,26 1,26 10.8,20.1 "/>
+                    </svg>
 
                 </a>
 
@@ -201,10 +199,10 @@
                         <!-- <a href="#" class="nav-link p-0 mt-lg-2" data-bs-toggle="modal" data-bs-target="#modal-sender"> -->
                         <a  href="{% url 'user:profile' %}" class="nav-link p-0 mt-lg-2">
                             <div class="avatar avatar-online avatar-md p-2">
-                                <img src="{{ request.user.profile_image.url }}" alt="#" class="avatar-img" style="object-fit: cover;">
+                                <img src="{{ request.user.get_profile_img }}" alt="#" class="avatar-img" style="object-fit: cover;">
                             </div>
                             <!-- <div class="avatar avatar-online avatar-xs d-xl-none">
-                                <img class="avatar-img" src="{{ request.user.profile_image.url }}" alt="">
+                                <img class="avatar-img" src="{{ request.user.get_profile_img }}" alt="">
                             </div> -->
                         </a>
                     </li>
@@ -920,7 +918,7 @@
                                     <!-- Message -->
                                     <div class="message message-out">
                                         <a href="#" data-bs-toggle="modal" data-bs-target="#modal-profile" class="avatar avatar-responsive">
-                                            <img class="avatar-img" src="{{ request.user.profile_image.url }}" alt="">
+                                            <img class="avatar-img" src="{{ request.user.get_profile_img }}" alt="">
                                         </a>
                                         <div class="message-inner">
                                             <div class="message-body">
