--- a/chat/templates/chat/video.html
+++ b/chat/templates/chat/video.html
@@ -11,6 +11,7 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Video Call</title>
 </head>
 
@@ -608,22 +609,23 @@
             display: none;
         }
 
-        .cover-player{
-            object-fit: cover;
-        }
-
         @media screen and (max-width: 900px) {
+            .left-side {
+                display: none;
+            }
+            
             .expand-btn {
                 display: block;
+                z-index: 5;
             }
 
             .right-side {
                 position: absolute;
-                right: 0px;
+                inset: 0 0 0 0;
                 background-color: var(--chat-background);
                 transform: translateX(100%);
-                z-index: 2;
-                width: 100%;
+                z-index: 10;
+                display: none;
             }
 
             .right-side.show {
@@ -636,10 +638,6 @@
         }
 
         @media screen and (max-width: 520px) {
-            .left-side {
-                display: none;
-            }
-
             .app-main {
                 padding: 72px 16px 16px 16px;
             }
@@ -677,15 +675,30 @@
                 margin: 0 4px;
                 font-size: 12px;
             }
-        }
-
-        @media screen and (max-width: 520px) and (max-height: 720px) {
+            
             .video-participant {
                 width: 50%;
                 height: 33.3%;
             }
         }
     </style>
+    <script>
+        $(document).ready(function(){
+            // $('button.mode-switch').click(function(){
+            //     $('body').toggleClass('dark');
+            // });
+            
+            $(".btn-close-right").click(function () {
+                $(".right-side").removeClass("show");
+                $(".expand-btn").addClass("show");
+            });
+            
+            $(".expand-btn").click(function () {
+                $(".right-side").addClass("show");
+                $(this).removeClass("show");
+            });
+        });
+    </script>
     <div class="app-container">
         <!-- <button class="mode-switch">
             <svg class="sun" fill="none" stroke="#fbb046" stroke-linecap="round" stroke-linejoin="round"
@@ -754,11 +767,21 @@
                 </a> -->
             </div>
         </div>
+        <style>
+            .custom-video{
+                object-fit: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
         <div class="app-main">
             <div class="video-call-wrapper" id="video-container">
                 <div class="video-participant" data-self="true">
                     <span class="name-tag">{{request.user.username}}</span>
-                    <video id="local-video" autoplay playsinline class="w-100 h-100" style="object-fit: cover;"></video>
+                    <video id="local-video" autoplay playsinline class="custom-video" style="background-image: url('{{request.user.get_profile_img}}');"></video>
                 </div>
             </div>
             <div class="video-call-actions ">
@@ -801,7 +824,7 @@
                 <div class="px-3 py-2" id="video-member-list" style="overflow-y: auto;">
                     <div class="member-info py-2 d-flex align-items-center" data-self="true">
                         <div class="participant profile-picture">
-                            <img src="{{request.user.profile_image.url}}" alt="Your Profile Picture">
+                            <img src="{{request.user.get_profile_img}}" alt="Your Profile Picture">
                         </div>
                         <div class="member-details">
                             <h6 class="mb-0">{{request.user.get_full_name}} <span class="text-muted">(You)</span></h6>
@@ -820,12 +843,7 @@
             </div> -->
         </div>
         <button class="expand-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-message-circle">
-                <path
-                    d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
         </button>
     </div>
 </body>
