--- a/post/templates/post/feeds-js.html
+++ b/post/templates/post/feeds-js.html
@@ -8,8 +8,82 @@
     let language = undefined;
     let scope_of_work = undefined;
 
+    let category_mul = [];
+    let language_mul = [];
+    let scope_of_work_mul = [];
+
+
     let currentPosts = $('.is-post').length;
     let dict;
+
+    function filterPostMultiple()
+    {
+        let filter;
+        let div_posts;
+         dict = {
+            "category": category_mul,
+            "language": language_mul,
+            "scope_of_work": scope_of_work_mul,
+        }
+        filter = '';
+         $.each($('.is-post'), function(k,v){
+               v.style.display = "none";
+            });
+
+         let filter_category = [];
+         let filter_language = [];
+         let filter_scope = [];
+
+         if(dict["category"].length <= 0)
+         {
+              $.each($('.is-post'), function(k,v){
+               filter_category.push(v);
+            });
+         }
+         else {
+             $.each(dict["category"], function (k, v) {
+                 post = $(`div[category="${v}"]`);
+                 $.each(post, function (k, v) {
+                     filter_category.push(v);
+                 });
+             });
+         }
+
+         if(dict["language"].length <= 0){
+             filter_language = filter_category;
+         }
+         else {
+             $.each(dict["language"], function (k, v) {
+                 $.each(filter_category, function (k, post) {
+                     if ($(post).attr("language") === v) {
+                         filter_language.push(post);
+                     }
+                 });
+             });
+         }
+         if(dict["scope_of_work"].length <= 0){
+             filter_scope = filter_language;
+         }
+         else {
+             $.each(dict["scope_of_work"], function (k, v) {
+                 $.each(filter_language, function (k, post) {
+                     if ($(post).attr("scope_of_work") === v) {
+                         filter_scope.push(post);
+                     }
+
+                 });
+             });
+         }
+
+         $.each($('.is-post'), function(k,v){
+               v.style.display = "none";
+            });
+
+        $.each(filter_scope, function(key, div) {
+            div.style.display = "block";
+        });
+
+    }
 
     function filterPost()
     {
@@ -48,18 +122,18 @@
 
     function clearLanguages()
     {
-        language = undefined;
-        filterPost();
+        language_mul = [];
+        filterPostMultiple();
     }
     function clearCategory()
     {
-        category = undefined;
-        filterPost();
+        category = [];
+        filterPostMultiple();
     }
     function clearScope()
     {
-        scope_of_work = undefined;
-        filterPost();
+        scope_of_work = [];
+        filterPostMultiple();
     }
 
     function clearAllFilters()
@@ -69,22 +143,48 @@
         });
     }
 
-    function setCategory(cat)
+    function setCategory(cat, element_id)
     {
-        category = cat;
-        filterPost();
+        let index = category_mul.indexOf(cat);
+
+        if(index === -1)
+        {
+            category_mul.push(cat);
+            $(`#${element_id}`).css("color", "red");
+        }
+        else {
+            category_mul.splice(index, 1);
+            $(`#${element_id}`).css("color", "black");
+        }
+        filterPostMultiple();
     }
 
-    function setLanguage(lang)
+    function setLanguage(lang, element_id)
     {
-        language = lang;
-        filterPost();
+        let index = language_mul.indexOf(lang);
+        if(index === -1){
+            language_mul.push(lang);
+        $(`#${element_id}`).css("color", "red");
+        }
+        else{
+            language_mul.splice(index, 1);
+            $(`#${element_id}`).css("color", "black");
+        }
+        filterPostMultiple();
     }
 
-    function setScope(scope)
+    function setScope(scope, element_id)
     {
-        scope_of_work = scope;
-        filterPost();
+        let index = scope_of_work_mul.indexOf(scope);
+        if(index === -1){
+            scope_of_work_mul.push(scope);
+            $(`#${element_id}`).css("color", "red");
+        }
+        else{
+            scope_of_work_mul.splice(index, 1);
+            $(`#${element_id}`).css("color", "black");
+        }
+        filterPostMultiple();
     }
 
     function createPost(posts)
@@ -737,7 +837,7 @@
             }
 
                         });
-        filterPost();
+        filterPostMultiple();
     }
 
     function createPostOnReady(posts)
